fix: overflow for subscribe-button

--- a/css/style.css
+++ b/css/style.css
@@ -839,6 +839,7 @@ template {
 .subscribe__button {
   position: absolute;
   min-width: 65px;
+  max-width: 150px;
   min-height: 100%;
   font-weight: bold;
   font-size: 12px;
@@ -850,6 +851,7 @@ template {
   border: none;
   outline: none;
   border-radius: 0px 4px 4px 0px;
+  word-wrap: wrap;
 }
 
 @media (max-width: 1200px) {
