--- a/sass/blocks/_newsletter.sass
+++ b/sass/blocks/_newsletter.sass
@@ -55,6 +55,7 @@
   &__button
     position: absolute
     min-width: 65px
+    max-width: 150px
     min-height: 100%
     font-weight: bold;
     font-size: 12px;
@@ -66,3 +67,4 @@
     border: none
     outline: none
     border-radius: 0px 4px 4px 0px
+    word-wrap: wrap
